@@ -115,6 +115,10 @@
     \itemize{
       \item Support for very old versions of \command{valgrind}
       (e.g. 3.3.0) has been removed.
+
+      \item The \command{libtool} script generated by
+      \command{configure} has been updated to support FreeBSD 10
+      (\PR{16410}).
     }
   }
 
